# datto_tui

./: .env.example  Cargo.toml  README.md  api_response.json
src/: app.rs  app_helpers.rs  app_settings_impl.rs  config.rs  event.rs  main.rs  tui.rs  ui.rs
src/api/: mod.rs  types.rs
src/api/datto/: activity.rs  devices.rs  jobs.rs  mod.rs  sites.rs  types.rs  variables.rs
src/api/datto_av/: mod.rs  types.rs
src/api/rocket_cyber/: agents.rs  incidents.rs  mod.rs  types.rs
src/api/sophos/: mod.rs
src/common/: jobs.rs  mod.rs  utils.rs
src/pages/: activity_detail.rs  device_detail.rs  mod.rs  popups.rs  site_detail.rs  site_list.rs
