[package]
name = "kyber_tui"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenvy = "0.15.7"
futures = "0.3.31"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["form", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
